fix margins on mobile

--- a/rog/src/Author.module.css
+++ b/rog/src/Author.module.css
@@ -10,11 +10,11 @@
     font-weight: 400;
     display: inline-block;
     transform: translateY(-0.5px);
+    margin-right: 18px;
 }
 
 .extraneous {
     display: inline-block;
-    margin-left: 18px;
     font-size: 0.79rem;
 }
 
